Fixed button text alignment

--- a/assets/src/scss/object/component/_buttons.scss
+++ b/assets/src/scss/object/component/_buttons.scss
@@ -8,6 +8,7 @@
 	font-size: $bs-font-size-md;
 	line-height: $bs-line-height;
 	padding: $bs-margin ($bs-margin * 3);
+	text-align: center;
 	vertical-align: middle;
 	white-space: nowrap;
 	overflow: hidden;
